@@ -32,6 +32,7 @@ newPSOCKnode <- function(machine = "localhost", ...,
     manual <- getClusterOption("manual", options)
     timeout <- getClusterOption("timeout", options)
     methods <- getClusterOption("methods", options)
+    useXDR <- getClusterOption("useXDR", options)
 
     ## build the local command for starting the worker
     env <- paste("MASTER=", master,
@@ -39,6 +40,7 @@ newPSOCKnode <- function(machine = "localhost", ...,
                  " OUT=", outfile,
                  " TIMEOUT=", timeout,
                  " METHODS=", methods,
+                 " XDR=", useXDR,
                  sep="")
     arg <- "parallel:::.slaveRSOCK()"
     rscript <- if (getClusterOption("homogeneous", options)) {
@@ -70,6 +72,7 @@ newPSOCKnode <- function(machine = "localhost", ...,
         }
 
         if (.Platform$OS.type == "windows") {
+            ## snow said:
             ## On Windows using input = something seems needed to
             ## disconnect standard input of an ssh process when run
             ## from Rterm (at least using putty's plink).  In
@@ -86,14 +89,16 @@ newPSOCKnode <- function(machine = "localhost", ...,
 
     con <- socketConnection("localhost", port = port, server = TRUE,
                             blocking = TRUE, open = "a+b", timeout = timeout)
-    structure(list(con = con, host = machine, rank = rank), class = "SOCKnode")
+    structure(list(con = con, host = machine, rank = rank),
+              class = if(useXDR) "SOCKnode" else "SOCK0node")
 }
 
-closeNode.SOCKnode <- function(node) close(node$con)
+closeNode.SOCKnode <- closeNode.SOCK0node <- function(node) close(node$con)
 
 sendData.SOCKnode <- function(node, data) serialize(data, node$con)
+sendData.SOCK0node <- function(node, data) serialize(data, node$con, xdr = FALSE)
 
-recvData.SOCKnode <- function(node) unserialize(node$con)
+recvData.SOCKnode <- recvData.SOCK0node <- function(node) unserialize(node$con)
 
 recvOneData.SOCKcluster <- function(cl)
 {
@@ -130,7 +135,7 @@ print.SOCKcluster <- function(x, ...)
     invisible(x)
 }
 
-print.SOCKnode <- function(x, ...)
+print.SOCKnode <- print.SOCK0node <- function(x, ...)
 {
     sendCall(x, eval, list(quote(Sys.getpid())))
     pid <- recvResult(x)
@@ -141,16 +146,16 @@ print.SOCKnode <- function(x, ...)
     invisible(x)
 }
 
-## formerly in RSOCKnode.R
 .slaveRSOCK <- function()
 {
-    makeSOCKmaster <- function(master, port, timeout)
+    makeSOCKmaster <- function(master, port, timeout, useXDR)
     {
         port <- as.integer(port)
         ## maybe use `try' and sleep/retry if first time fails?
         con <- socketConnection(master, port = port, blocking = TRUE,
                                 open = "a+b", timeout = timeout)
-        structure(list(con = con), class = "SOCKnode")
+        structure(list(con = con),
+                  class = if(useXDR) "SOCKnode" else "SOCK0node")
     }
 
     ## set defaults in case run manually without args.
@@ -158,6 +163,7 @@ print.SOCKnode <- function(x, ...)
     port <- 10187 # no point in getting option on worker.
     outfile <- Sys.getenv("R_SNOW_OUTFILE") # defaults to ""
     methods <- TRUE
+    useXDR <- TRUE
 
     for (a in commandArgs(TRUE)) {
         ## Or use strsplit?
@@ -169,7 +175,8 @@ print.SOCKnode <- function(x, ...)
                PORT = {port <- value},
                OUT = {outfile <- value},
                TIMEOUT = {timeout <- value},
-               METHODS = {methods <- value})
+               METHODS = {methods <- value},
+               XDR = {useXDR <- as.logical(value)})
     }
 
     if(as.logical(methods)) library("methods") ## because Rscript does not load methods by default
@@ -180,5 +187,5 @@ print.SOCKnode <- function(x, ...)
                    Sys.getpid(), paste(master, port, sep = ":"),
                    format(Sys.time(), "%H:%M:%OS3"))
     cat(msg)
-    slaveLoop(makeSOCKmaster(master, port, timeout))
+    slaveLoop(makeSOCKmaster(master, port, timeout, useXDR))
 }
