@@ -82,7 +82,8 @@ mckill <- function(process, signal = 2L)
 ## used by mcparallel, mclapply
 sendMaster <- function(what)
 {
-    if (!is.raw(what)) what <- serialize(what, NULL, FALSE)
+    # This is talking to the same machine, so no point in using xdr.
+    if (!is.raw(what)) what <- serialize(what, NULL, xdr = FALSE)
     .Call(C_mc_send_master, what, PACKAGE = "parallel")
 }
 
