@@ -1,6 +1,6 @@
 % File src/library/parallel/man/makePSOCKcluster.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 2003-11 R Core Development Team
+% Copyright 2003-12 R Core Development Team
 % Distributed under GPL 2 or later
 
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
@@ -41,7 +41,7 @@ setDefaultCluster(cl = NULL)
 \details{
   \code{makeCluster} creates a cluster of one of the supported types.
   The default type, \code{"PSOCK"}, calls \code{makePSOCKcluster}.  Type
-  \code{"FORK"}calls \code{makeForkCluster}.  Other types are passed to
+  \code{"FORK"} calls \code{makeForkCluster}.  Other types are passed to
   package \CRANpkg{snow}.
   
   \code{makePSOCKcluster} is very similar to \code{makeSOCKcluster} in
@@ -95,11 +95,16 @@ setDefaultCluster(cl = NULL)
     \item{\code{methods}}{Logical.  If true (default) the workers will
       load the \pkg{methods} package: not loading it saves ca 30\% of the
       startup time of the cluster.}
+    \item{\code{useXDR}}{Logical. If true (default) serialization will
+      use XDR: where large amounts of data are to been transferred and
+      all the nodes are little-endian, communication may be
+      substantially fast if this is set to false.}
   }
 
   Function \code{makeForkCluster} creates a socket cluster by forking
   (and hence is not available on Windows).  It supports options
-  \code{port}, \code{timeout} and \code{outfile}.
+  \code{port}, \code{timeout} and \code{outfile}, and always uses
+  \code{useXDR = FALSE}.
   
   It is good practice to shut down the workers by calling
   \code{\link{stopCluster}}: however the workers will terminate
